// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a styled component 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
/>
`;

exports[`creates a styled component of a class component 1`] = `<View />`;

exports[`creates a styled component of a class component 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
/>
`;

exports[`creates a styled component of a functional component 1`] = `<View />`;

exports[`creates a styled component of a functional component 2`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
/>
`;

exports[`creates a styled component with dynamic styles based on props 1`] = `
<View
  style={
    {
      "padding": 0,
    }
  }
/>
`;

exports[`creates a styled component with dynamic styles based on props 2`] = `
<View
  padded={true}
  style={
    {
      "padding": 10,
    }
  }
/>
`;

exports[`creates a styled component with empty dynamic styles 1`] = `
<View
  style={{}}
/>
`;

exports[`creates a styled component with empty static styles 1`] = `
<View
  style={{}}
/>
`;

exports[`creates a styled component with null dynamic styles 1`] = `
<View
  style={{}}
/>
`;

exports[`creates a styled component with null static styles 1`] = `
<View
  style={{}}
/>
`;
